Updated README with todo items, terrform fmt, filter branch so that apply only happens on main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,3 +54,6 @@ workflows:
             - Github Admin
           requires:
             - hold-apply
+          filters:
+            branches:
+              only: main
