moving the hold-apply approval to just pushes to main.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,9 @@ workflows:
           type: approval
           requires:
             - plan-apply
+          filters:
+            branches:
+              only: main
       - apply:
           context:
             - Terraform State
